Created a prototype mergesort proficiency exercise

--- a/AV/mergesort-av.html
+++ b/AV/mergesort-av.html
@@ -132,7 +132,7 @@ form {
 
   // Process About button: Pop up a message with an Alert
   function about() {
-    var mystring = "Mergesort Algorithm Visualization\nWritten by ...\nCreated as part of the OpenDSA hypertextbook project.\nFor more information, see http://algoviz.org/OpenDSA\nWritten during Spring, 2012\nLast update: January, 2012\nJSAV library version " + JSAV.version();
+    var mystring = "Mergesort Algorithm Visualization\nWritten by Daniel Breakiron\nCreated as part of the OpenDSA hypertextbook project.\nFor more information, see http://algoviz.org/OpenDSA\nWritten during Spring, 2012\nLast update: April, 2012\nJSAV library version " + JSAV.version();
     alert(mystring);
   }
 
