--- a/Exercises/ShellsortSeries.html
+++ b/Exercises/ShellsortSeries.html
@@ -23,8 +23,8 @@
     function makeSeries(count) {
       var series = [];
       for (var i = 0; i<=count; i++)
-        series[i] = KhanUtil.randRange(1, 10);
-      if (KhanUtil.randRange(0, 1) === 1)
+        series[i] = KhanUtil.randRange(1, 10-(2*i));
+      if (KhanUtil.randRange(0, 3) !== 3)
         series[count] = 1;
       return series;
     }
