Fixed issue with hidden label in binary heap insert exercise

--- a/AV/binaryheap-insert-proficiency.html
+++ b/AV/binaryheap-insert-proficiency.html
@@ -71,7 +71,7 @@
       insertData = initData.slice(initNum, nodeNum);
       swapIndex = jsav.variable(-1);
       insertPos = jsav.variable(0);
-      insertValue = jsav.variable(insertData[0], {display: true});
+      insertValue = jsav.variable(insertData[0], {visible: true});
       $.fx.off = false;
       return bh;
     }
