Update JSAVE to 0.4.6-21. Update kd tree AV and add draft hashingMC.

--- a/Exercises/HashingMC.html
+++ b/Exercises/HashingMC.html
@@ -110,32 +110,32 @@
 	  
 	  <div id="problem-type-or-description">
         <p class="question"> Which of the following is true of open hashing? </p>
-        <div class="solution"><var>" Many elements can be stored at the same table cell"</var></div>
+        <div class="solution"><var>"Many elements can be stored at the same table cell"</var></div>
 			<ul class="choices" data-show="4" data-none="true">
-			  <li><var>" All data is stored in the table array directly."</var></li>
-			  <li><var>" The algorithm running times are due to "probes" of different table cells until an empty one is found"</var></li>
-			  <li><var>" Many elements can be stored at the same table cell "</var></li>			   	 
+			  <li><var>"All data is stored in the table array directly."</var></li>
+			  <li><var>"The algorithm running times are due to "probes" of different table cells until an empty one is found"</var></li>
+			  <li><var>"Many elements can be stored at the same table cell "</var></li>			   	 
 			</ul>
       </div> 
 	  
 	  <div id="problem-type-or-description">
         <p class="question"> What is a disadvantage of linear probing? </p>
-        <div class="solution"><var>" you tend to get primary clustering if the hashing function is not uniform"</var></div>
+        <div class="solution"><var>"you tend to get primary clustering if the hashing function is not uniform"</var></div>
 			<ul class="choices" data-show="4" data-none="true">
-			  <li><var>" Can allocate a lot of extra memory."</var></li>
-			  <li><var>" you tend to get primary clustering if the hashing function is not uniform "</var></li>
-			  <li><var>" the algorithm is difficult to program"</var></li>			  	  	 
+			  <li><var>"can allocate a lot of extra memory."</var></li>
+			  <li><var>"you tend to get primary clustering if the hashing function is not uniform "</var></li>
+			  <li><var>"the algorithm is difficult to program"</var></li>			  	  	 
 			</ul>
       </div> 
 	  
 	  <div id="problem-type-or-description">
         <p class="question"> What is one disadvantage of quadratic probing as a hash scheme? </p>
-        <div class="solution"><var>" insertions can actually fail even if there are empty entries left"</var></div>
+        <div class="solution"><var>"insertions can actually fail even if there are empty entries left"</var></div>
 			<ul class="choices" data-show="4">
-			  <li><var>" insertions can actually fail even if there are empty entries left "</var></li>
-			  <li><var>" you have to check whether or not a node needs to be split"</var></li>
-			  <li><var>" memory usage increases with each insertion "</var></li>
-			  <li><var>" primary clustering can degrade performance "</var></li>	  	 
+			  <li><var>"insertions can actually fail even if there are empty entries left "</var></li>
+			  <li><var>"you have to check whether or not a node needs to be split"</var></li>
+			  <li><var>"memory usage increases with each insertion "</var></li>
+			  <li><var>"primary clustering can degrade performance "</var></li>	  	 
 			</ul>
       </div> 	  	  
 	
